@@ -1,3 +1,9 @@
+2011-03-11  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/linuxtools/internal/cdt/libhover/LibHover.java (isParmMatch): Fix to
+	allow for the case when we have a referenced version of the class were in passed as an
+	argument.
+
 2011-02-17  Jeff Johnston  <jjohnstn@redhat.com>
 
 	Resolves #328655
